// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Day should render correctly 1`] = `
.emotion-0 {
  vertical-align: middle;
  text-align: center;
  cursor: pointer;
  position: relative;
  color: #0f0f17;
  width: 2.5rem;
  padding: 0 0.25rem;
  font-weight: bold;
  opacity: 1;
}

.emotion-1 {
  border: 0.0625rem solid #b0b8ff;
  border-radius: 100%;
  width: 2.4375rem;
  height: 2.4375rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  background: transparent;
}

.emotion-1:hover {
  border-radius: 100%;
  background: #f6f7ff;
}

.emotion-0 {
  vertical-align: middle;
  text-align: center;
  cursor: pointer;
  position: relative;
  color: #0f0f17;
  width: 2.5rem;
  padding: 0 0.25rem;
  font-weight: bold;
  opacity: 1;
}

.emotion-1 {
  border: 0.0625rem solid #b0b8ff;
  border-radius: 100%;
  width: 2.4375rem;
  height: 2.4375rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  background: transparent;
}

.emotion-1:hover {
  border-radius: 100%;
  background: #f6f7ff;
}

<div>
  <table>
    <tbody>
      <tr>
        <td
          style="padding: 0px;"
        >
          <div
            class="emotion-0"
            data-testid="3_11_2020"
          >
            <div
              class="emotion-1"
            >
              3
            </div>
          </div>
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`Day should render disabled correctly 1`] = `
.emotion-0 {
  vertical-align: middle;
  text-align: center;
  cursor: pointer;
  position: relative;
  color: #0f0f17;
  width: 2.5rem;
  padding: 0 0.25rem;
  font-weight: bold;
  opacity: 0.5;
}

.emotion-1 {
  border: 0.0625rem solid #b0b8ff;
  border-radius: 100%;
  width: 2.4375rem;
  height: 2.4375rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  background: transparent;
}

.emotion-0 {
  vertical-align: middle;
  text-align: center;
  cursor: pointer;
  position: relative;
  color: #0f0f17;
  width: 2.5rem;
  padding: 0 0.25rem;
  font-weight: bold;
  opacity: 0.5;
}

.emotion-1 {
  border: 0.0625rem solid #b0b8ff;
  border-radius: 100%;
  width: 2.4375rem;
  height: 2.4375rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  background: transparent;
}

<div>
  <table>
    <tbody>
      <tr>
        <td
          style="padding: 0px;"
        >
          <div
            class="emotion-0"
            data-testid="3_11_2020"
          >
            <div
              class="emotion-1"
            >
              3
            </div>
          </div>
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`Day should render isFirst, isLast correctly 1`] = `
.emotion-0 {
  vertical-align: middle;
  text-align: center;
  cursor: pointer;
  position: relative;
  color: #0f0f17;
  width: 2.5rem;
  padding: 0 0.25rem;
  font-weight: bold;
  opacity: 1;
  background: transparent;
}

.emotion-0:after {
  z-index: -1;
  content: ' ';
  height: 100%;
  width: 50%;
  position: absolute;
  top: 0;
  background: false;
  left: initial;
  right: 0;
  border-bottom-right-radius: false;
  border-top-right-radius: false;
  border-bottom-left-radius: false;
  border-top-left-radius: false;
}

.emotion-1 {
  border: 0.0625rem solid #b0b8ff;
  border-radius: 100%;
  width: 2.4375rem;
  height: 2.4375rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  background: transparent;
}

.emotion-1:hover {
  border-radius: 100%;
  background: #f6f7ff;
}

.emotion-0 {
  vertical-align: middle;
  text-align: center;
  cursor: pointer;
  position: relative;
  color: #0f0f17;
  width: 2.5rem;
  padding: 0 0.25rem;
  font-weight: bold;
  opacity: 1;
  background: transparent;
}

.emotion-0:after {
  z-index: -1;
  content: ' ';
  height: 100%;
  width: 50%;
  position: absolute;
  top: 0;
  background: false;
  left: initial;
  right: 0;
  border-bottom-right-radius: false;
  border-top-right-radius: false;
  border-bottom-left-radius: false;
  border-top-left-radius: false;
}

.emotion-1 {
  border: 0.0625rem solid #b0b8ff;
  border-radius: 100%;
  width: 2.4375rem;
  height: 2.4375rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  background: transparent;
}

.emotion-1:hover {
  border-radius: 100%;
  background: #f6f7ff;
}

<div>
  <table>
    <tbody>
      <tr>
        <td
          style="padding: 0px;"
        >
          <div
            class="emotion-0"
            data-testid="3_11_2020"
          >
            <div
              class="emotion-1"
            >
              3
            </div>
          </div>
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`Day should render isFirst, isLast correctly 2`] = `
.emotion-0 {
  vertical-align: middle;
  text-align: center;
  cursor: pointer;
  position: relative;
  color: #0f0f17;
  width: 2.5rem;
  padding: 0 0.25rem;
  font-weight: bold;
  opacity: 1;
  background: transparent;
}

.emotion-0:after {
  z-index: -1;
  content: ' ';
  height: 100%;
  width: 50%;
  position: absolute;
  top: 0;
  background: false;
  left: 0;
  right: initial;
  border-bottom-right-radius: false;
  border-top-right-radius: false;
  border-bottom-left-radius: false;
  border-top-left-radius: false;
}

.emotion-1 {
  border: 0.0625rem solid #b0b8ff;
  border-radius: 100%;
  width: 2.4375rem;
  height: 2.4375rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  background: transparent;
}

.emotion-1:hover {
  border-radius: 100%;
  background: #f6f7ff;
}

.emotion-0 {
  vertical-align: middle;
  text-align: center;
  cursor: pointer;
  position: relative;
  color: #0f0f17;
  width: 2.5rem;
  padding: 0 0.25rem;
  font-weight: bold;
  opacity: 1;
  background: transparent;
}

.emotion-0:after {
  z-index: -1;
  content: ' ';
  height: 100%;
  width: 50%;
  position: absolute;
  top: 0;
  background: false;
  left: 0;
  right: initial;
  border-bottom-right-radius: false;
  border-top-right-radius: false;
  border-bottom-left-radius: false;
  border-top-left-radius: false;
}

.emotion-1 {
  border: 0.0625rem solid #b0b8ff;
  border-radius: 100%;
  width: 2.4375rem;
  height: 2.4375rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  background: transparent;
}

.emotion-1:hover {
  border-radius: 100%;
  background: #f6f7ff;
}

<div>
  <table>
    <tbody>
      <tr>
        <td
          style="padding: 0px;"
        >
          <div
            class="emotion-0"
            data-testid="3_11_2020"
          >
            <div
              class="emotion-1"
            >
              3
            </div>
          </div>
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;
